bug-fixed: last-message box is visible also if text is empty

--- a/src/app/component/last-message/last-message.component.scss
+++ b/src/app/component/last-message/last-message.component.scss
@@ -110,7 +110,7 @@
     margin-left: 45px;
     margin-right: 16px;
     border-radius: 12px 12px 12px 12px;
-    padding: 5px;
+    padding: 0px 5px;
 }
 
 .previewNewMessagge.no-background{
